Avances Pagina Inicio
-Pequeño avance en la pagina de inicio.
-Agregado espacio para libros recomendados.
-Mas CSS agregado a estilos.css

--- a/TuLibroWeb/TuLibroWeb.csproj
+++ b/TuLibroWeb/TuLibroWeb.csproj
@@ -117,8 +117,7 @@
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>7777</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost/TuLibroWeb</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
