Añadido XML para probar
-Añadi un XML para cachar si puedo cargar los libros de ahí y tener una
especie de base de datos, esto es por si funciona no mas.

--- a/TuLibroWeb/TuLibroWeb.csproj
+++ b/TuLibroWeb/TuLibroWeb.csproj
@@ -53,6 +53,9 @@
   <ItemGroup>
     <Content Include="Inicio.aspx" />
     <Content Include="InicioDeSession.aspx" />
+    <Content Include="libros.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="recursos\css\estilo.css" />
     <Content Include="recursos\imagenes\banner.png" />
     <Content Include="recursos\imagenes\banner_transparente.png" />
