Añadida Clase Stock
-Creada clase para llevar cuenta del Stock de los productos.
-La clase carga el stock desde un archivo XML
-Documentada la clase Stock
-Limpiado Inicio.cs y agregados los campos para stock y libros.

--- a/TuLibroWeb/TuLibroWeb.csproj
+++ b/TuLibroWeb/TuLibroWeb.csproj
@@ -55,6 +55,7 @@
     <Content Include="InicioDeSession.aspx" />
     <Content Include="libros.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="recursos\css\estilo.css" />
     <Content Include="recursos\imagenes\banner.png" />
