--- a/BibliotecaTuLibro/BibliotecaTuLibro.csproj
+++ b/BibliotecaTuLibro/BibliotecaTuLibro.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Libro.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stock.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
