--- a/BibliotecaTuLibro/BibliotecaTuLibro.csproj
+++ b/BibliotecaTuLibro/BibliotecaTuLibro.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarritoCompra.cs" />
     <Compile Include="Libro.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
