Mas cambios del otro dia
-Se me paso actualziar un par de archivos

--- a/TuLibroWeb/TuLibroWeb.csproj
+++ b/TuLibroWeb/TuLibroWeb.csproj
@@ -61,19 +61,19 @@
     <Content Include="recursos\css\estilo.css" />
     <Content Include="recursos\imagenes\banner.png" />
     <Content Include="recursos\imagenes\banner_transparente.png" />
-    <Content Include="recursos\imagenes\book-thumbnails\01.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\02.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\03.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\04.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\05.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\06.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\07.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\08.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\09.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\10.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\11.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\12.jpg" />
-    <Content Include="recursos\imagenes\book-thumbnails\13.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hg-01.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hg-02.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hg-03.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hp-01.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hp-02.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hp-03.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hp-04.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hp-05.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hp-06.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\hp-07.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\sk-carrie.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\sk-resplandor.jpg" />
+    <Content Include="recursos\imagenes\book-thumbnails\sk-talisman.jpg" />
     <Content Include="recursos\imagenes\carro_gris.png" />
     <Content Include="recursos\imagenes\carro_negro.png" />
     <Content Include="Registro.aspx" />
