--- a/TuLibroWeb/TuLibroWeb.csproj
+++ b/TuLibroWeb/TuLibroWeb.csproj
@@ -62,6 +62,7 @@
     <Content Include="ModificarPerfil.aspx" />
     <Content Include="Perfil.aspx" />
     <Content Include="recursos\css\estilo.css" />
+    <Content Include="recursos\imagenes\agregar.png" />
     <Content Include="recursos\imagenes\banner.png" />
     <Content Include="recursos\imagenes\banner_transparente.png" />
     <Content Include="recursos\imagenes\book-thumbnails\hg-01.jpg" />
@@ -81,6 +82,7 @@
     <Content Include="recursos\imagenes\carro_negro.png" />
     <Content Include="Registro.aspx" />
     <Content Include="RegistroCompletado.aspx" />
+    <Content Include="VistaLibro.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -153,6 +155,13 @@
     </Compile>
     <Compile Include="RegistroCompletado.aspx.designer.cs">
       <DependentUpon>RegistroCompletado.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VistaLibro.aspx.cs">
+      <DependentUpon>VistaLibro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VistaLibro.aspx.designer.cs">
+      <DependentUpon>VistaLibro.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
